Add license information

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,7 @@ name = "uring-executor"
 version = "0.1.0"
 edition = "2021"
 description = "Experimental io_uring-based asynchronous runtime"
+license = "Apache-2.0/MIT"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
