--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,7 +19,11 @@ parking_lot = "0.11.2"
 
 static_assertions = "1.1.0"
 
+log = "0.4.14"
+
+crossbeam-deque = "0.8.1"
+crossbeam-channel = "0.5.1"
+
 [dev-dependencies]
 anyhow = "1.0.49"
-log = "0.4.14"
 env_logger = "0.9.0"
