--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,8 @@ log = "0.4.14"
 crossbeam-deque = "0.8.1"
 crossbeam-channel = "0.5.1"
 
+rand = "0.8.4"
+
 [dev-dependencies]
 anyhow = "1.0.49"
 env_logger = "0.9.0"
